--- a/ProyectoHogarAncianos/ProyectoHogarAncianos/packages.config
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianos/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="dotConnect.Express.for.PostgreSQL" version="7.11.1172" targetFramework="net461" />
+  <package id="MaterialSkin" version="0.2.1" targetFramework="net461" />
   <package id="MaterialSkin.Updated" version="0.2.2" targetFramework="net461" />
+  <package id="Npgsql" version="4.0.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
