Clase Global y Script
Script para base de datos 

y nueva clase global para el manejo del usuario logeado

--- a/ProyectoHogarAncianos/ProyectoHogarAncianosEntidades/ProyectoHogarAncianosEntidades.csproj
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianosEntidades/ProyectoHogarAncianosEntidades.csproj
@@ -51,6 +51,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataContext1.lqml</DependentUpon>
     </Compile>
+    <Compile Include="PersonaLogeada.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
