--- a/ProyectoHogarAncianos/ProyectoHogarAncianosLogica/ProyectoHogarAncianosLogica.csproj
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianosLogica/ProyectoHogarAncianosLogica.csproj
@@ -33,6 +33,7 @@
     <Reference Include="Devart.Data.Linq, Version=4.8.1509.0, Culture=neutral, PublicKeyToken=09af7300eec23701, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
