--- a/ProyectoHogarAncianos/ProyectoHogarAncianos/ProyectoHogarAncianos.csproj
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianos/ProyectoHogarAncianos.csproj
@@ -100,6 +100,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recetas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Recetas.Designer.cs">
+      <DependentUpon>Recetas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Usuarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -140,6 +146,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Recetas.resx">
+      <DependentUpon>Recetas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Usuarios.resx">
       <DependentUpon>Usuarios.cs</DependentUpon>
     </EmbeddedResource>
