--- a/ProyectoHogarAncianos/ProyectoHogarAncianosLogica/ProyectoHogarAncianosLogica.csproj
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianosLogica/ProyectoHogarAncianosLogica.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PersonaLogica.cs" />
+    <Compile Include="PersonaPacienteLogica.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
