--- a/ProyectoHogarAncianos/ProyectoHogarAncianosEntidades/ProyectoHogarAncianosEntidades.csproj
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianosEntidades/ProyectoHogarAncianosEntidades.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClaseGenero.cs" />
     <Compile Include="DataContext1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
