--- a/ProyectoHogarAncianos/ProyectoHogarAncianosDatos/ProyectoHogarAncianosDatos.csproj
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianosDatos/ProyectoHogarAncianosDatos.csproj
@@ -31,6 +31,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Devart.Data.Linq, Version=4.8.1509.0, Culture=neutral, PublicKeyToken=09af7300eec23701, processorArchitecture=MSIL" />
+    <Reference Include="MaterialSkin, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MaterialSkin.Updated.0.2.2\lib\MaterialSkin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Npgsql, Version=4.0.1.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
       <HintPath>..\packages\Npgsql.4.0.1\lib\net451\Npgsql.dll</HintPath>
       <Private>True</Private>
@@ -58,9 +62,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MedicamentoDatos.cs" />
     <Compile Include="PersonaPacienteDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PersonaDatos.cs" />
+    <Compile Include="RecetaDatos.cs" />
+    <Compile Include="DetallesRecetaDatos.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProyectoHogarAncianosEntidades\ProyectoHogarAncianosEntidades.csproj">
