--- a/ProyectoHogarAncianos/ProyectoHogarAncianosDatos/ProyectoHogarAncianosDatos.csproj
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianosDatos/ProyectoHogarAncianosDatos.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActividadDatos.cs" />
     <Compile Include="MedicamentoDatos.cs" />
     <Compile Include="PersonaPacienteDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
