--- a/ProyectoHogarAncianos/ProyectoHogarAncianos/ProyectoHogarAncianos.csproj
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianos/ProyectoHogarAncianos.csproj
@@ -136,6 +136,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecetaPaciente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RecetaPaciente.Designer.cs">
+      <DependentUpon>RecetaPaciente.cs</DependentUpon>
+    </Compile>
     <Compile Include="Recetas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -194,6 +200,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RecetaPaciente.resx">
+      <DependentUpon>RecetaPaciente.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Recetas.resx">
       <DependentUpon>Recetas.cs</DependentUpon>
     </EmbeddedResource>
