--- a/ProyectoHogarAncianos/ProyectoHogarAncianos/packages.config
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianos/packages.config
@@ -3,6 +3,7 @@
   <package id="dotConnect.Express.for.PostgreSQL" version="7.11.1172" targetFramework="net461" />
   <package id="MaterialSkin" version="0.2.1" targetFramework="net461" />
   <package id="MaterialSkin.Updated" version="0.2.2" targetFramework="net461" />
+  <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net461" />
   <package id="Npgsql" version="4.0.1" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net461" />
