--- a/ProyectoHogarAncianos/packages/repositories.config
+++ b/ProyectoHogarAncianos/packages/repositories.config
@@ -2,4 +2,6 @@
 <repositories>
   <repository path="..\ProyectoHogarAncianos\packages.config" />
   <repository path="..\ProyectoHogarAncianosDatos\packages.config" />
+  <repository path="..\ProyectoHogarAncianosEntidades\packages.config" />
+  <repository path="..\ProyectoHogarAncianosLogica\packages.config" />
 </repositories>
