--- a/ProyectoHogarAncianos/ProyectoHogarAncianosEntidades/ProyectoHogarAncianosEntidades.csproj
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianosEntidades/ProyectoHogarAncianosEntidades.csproj
@@ -56,6 +56,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataContext1.lqml</DependentUpon>
     </Compile>
+    <Compile Include="MedicamentoReport.cs" />
     <Compile Include="PersonaLogeada.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
