--- a/ProyectoHogarAncianos/ProyectoHogarAncianosDatos/ProyectoHogarAncianosDatos.csproj
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianosDatos/ProyectoHogarAncianosDatos.csproj
@@ -35,9 +35,8 @@
       <HintPath>..\packages\MaterialSkin.Updated.0.2.2\lib\MaterialSkin.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Npgsql, Version=4.0.1.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Npgsql.4.0.1\lib\net451\Npgsql.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Npgsql">
+      <HintPath>..\ProyectoHogarAncianos\bin\Debug\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -63,12 +62,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActividadDatos.cs" />
+    <Compile Include="CitasDatos.cs" />
+    <Compile Include="Conexion.cs" />
+    <Compile Include="DetalleRecetaFavoritaDatos.cs" />
     <Compile Include="MedicamentoDatos.cs" />
+    <Compile Include="PacienteDatos.cs" />
     <Compile Include="PersonaPacienteDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PersonaDatos.cs" />
     <Compile Include="RecetaDatos.cs" />
     <Compile Include="DetallesRecetaDatos.cs" />
+    <Compile Include="RecetaFavoritaDatos.cs" />
     <Compile Include="ViaDatos.cs" />
   </ItemGroup>
   <ItemGroup>
