--- a/ProyectoHogarAncianos/ProyectoHogarAncianosEntidades/ProyectoHogarAncianosEntidades.csproj
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianosEntidades/ProyectoHogarAncianosEntidades.csproj
@@ -50,14 +50,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Citas.cs" />
     <Compile Include="ClaseGenero.cs" />
     <Compile Include="DataContext1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DataContext1.lqml</DependentUpon>
     </Compile>
+    <Compile Include="DetalleRecetaFavorita.cs" />
     <Compile Include="PersonaLogeada.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecetaFavorita.cs" />
+    <Compile Include="Repo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
