--- a/ProyectoHogarAncianos/ProyectoHogarAncianosLogica/ProyectoHogarAncianosLogica.csproj
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianosLogica/ProyectoHogarAncianosLogica.csproj
@@ -48,9 +48,11 @@
   <ItemGroup>
     <Compile Include="ActividadLogica.cs" />
     <Compile Include="MedicamentoLogica.cs" />
+    <Compile Include="PacienteLogica.cs" />
     <Compile Include="PersonaLogica.cs" />
     <Compile Include="PersonaPacienteLogica.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecetaFavoritaLogica.cs" />
     <Compile Include="RecetaLogica.cs" />
     <Compile Include="ViaLogica.cs" />
   </ItemGroup>
